run_instances/mypy_fail2pass_check/gold/fmt/fmtlib__fmt-2158/test_output_prev_apply.txt
+ cd /testbed
+ TARGET_COMMIT_SHA=835b910e7d758efdfdce9f23df1b190deb3373db
+ TEST_FILES=test/format-test.cc
+ TEST_NAME=format-test
+ echo 'Cleaning up any existing build directory...'
+ rm -rf build
Cleaning up any existing build directory...
+ echo 'Performing initial CMake configuration...'
+ mkdir build
Performing initial CMake configuration...
+ cmake -S . -B build -DFMT_TEST=ON -DCMAKE_BUILD_TYPE=Release
-- CMake version: 3.22.1
-- The CXX compiler identification is GNU 11.4.0
-- Detecting CXX compiler ABI info
-- Detecting CXX compiler ABI info - done
-- Check for working CXX compiler: /usr/bin/c++ - skipped
-- Detecting CXX compile features
-- Detecting CXX compile features - done
-- Version: 7.1.3
-- Build type: Release
-- CXX_STANDARD: 11
-- Performing Test has_std_11_flag
-- Performing Test has_std_11_flag - Success
-- Performing Test has_std_0x_flag
-- Performing Test has_std_0x_flag - Success
-- Performing Test SUPPORTS_USER_DEFINED_LITERALS
-- Performing Test SUPPORTS_USER_DEFINED_LITERALS - Success
-- Performing Test FMT_HAS_VARIANT
-- Performing Test FMT_HAS_VARIANT - Success
-- Required features: cxx_variadic_templates
-- Looking for strtod_l
-- Looking for strtod_l - found
-- Target 'doc' disabled (requires doxygen)
-- Looking for C++ include pthread.h
-- Looking for C++ include pthread.h - found
-- Performing Test CMAKE_HAVE_LIBC_PTHREAD
-- Performing Test CMAKE_HAVE_LIBC_PTHREAD - Success
-- Found Threads: TRUE  
-- Performing Test HAVE_FNO_DELETE_NULL_POINTER_CHECKS
-- Performing Test HAVE_FNO_DELETE_NULL_POINTER_CHECKS - Success
-- FMT_PEDANTIC: OFF
-- Configuring done
-- Generating done
-- Build files have been written to: /testbed/build
Performing initial project build with -j2...
+ configure_rc=0
+ '[' 0 -ne 0 ']'
+ echo 'Performing initial project build with -j2...'
+ cmake --build build -j2
[  2%] Building CXX object test/CMakeFiles/gmock.dir/gmock-gtest-all.cc.o
[  4%] Building CXX object CMakeFiles/fmt.dir/src/format.cc.o
[  6%] Building CXX object CMakeFiles/fmt.dir/src/os.cc.o
[  8%] Linking CXX static library libfmt.a
[  8%] Built target fmt
[ 10%] Linking CXX static library libgmock.a
[ 10%] Built target gmock
[ 14%] Building CXX object test/CMakeFiles/test-main.dir/test-main.cc.o
[ 14%] Building CXX object test/CMakeFiles/posix-mock-test.dir/posix-mock-test.cc.o
[ 16%] Building CXX object test/CMakeFiles/test-main.dir/gtest-extra.cc.o
[ 18%] Building CXX object test/CMakeFiles/test-main.dir/util.cc.o
[ 20%] Linking CXX static library libtest-main.a
[ 20%] Built target test-main
[ 22%] Building CXX object test/CMakeFiles/header-only-test.dir/header-only-test.cc.o
[ 24%] Building CXX object test/CMakeFiles/header-only-test.dir/header-only-test2.cc.o
[ 26%] Building CXX object test/CMakeFiles/header-only-test.dir/test-main.cc.o
[ 28%] Linking CXX executable ../bin/header-only-test
[ 28%] Built target header-only-test
[ 30%] Building CXX object test/CMakeFiles/posix-mock-test.dir/__/src/format.cc.o
[ 32%] Building CXX object test/CMakeFiles/posix-mock-test.dir/test-main.cc.o
[ 34%] Building CXX object test/CMakeFiles/posix-mock-test.dir/gtest-extra.cc.o
[ 36%] Building CXX object test/CMakeFiles/posix-mock-test.dir/util.cc.o
[ 38%] Building CXX object test/CMakeFiles/assert-test.dir/assert-test.cc.o
[ 40%] Linking CXX executable ../bin/assert-test
[ 40%] Built target assert-test
[ 42%] Building CXX object test/CMakeFiles/chrono-test.dir/chrono-test.cc.o
[ 44%] Linking CXX executable ../bin/posix-mock-test
[ 44%] Built target posix-mock-test
[ 46%] Building CXX object test/CMakeFiles/color-test.dir/color-test.cc.o
[ 48%] Linking CXX executable ../bin/color-test
[ 48%] Built target color-test
[ 51%] Building CXX object test/CMakeFiles/core-test.dir/core-test.cc.o
[ 53%] Linking CXX executable ../bin/core-test
[ 53%] Built target core-test
[ 55%] Building CXX object test/CMakeFiles/gtest-extra-test.dir/gtest-extra-test.cc.o
[ 57%] Linking CXX executable ../bin/chrono-test
[ 57%] Built target chrono-test
[ 59%] Building CXX object test/CMakeFiles/format-test.dir/format-test.cc.o
/testbed/test/format-test.cc: In member function 'virtual void IteratorTest_TruncatingIteratorDefaultConstruct_Test::TestBody()':
/testbed/test/format-test.cc:165:79: error: static assertion failed
  165 |       std::is_default_constructible<fmt::detail::truncating_iterator<char*>>::value,
      |       ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~
/testbed/test/format-test.cc:168:43: error: no matching function for call to 'fmt::v7::detail::truncating_iterator<char*>::truncating_iterator()'
  168 |   fmt::detail::truncating_iterator<char*> it;
      |                                           ^~
In file included from /testbed/test/format-test.cc:29:
/testbed/include/fmt/format.h:505:3: note: candidate: 'fmt::v7::detail::truncating_iterator<OutputIt, std::integral_constant<bool, false> >::truncating_iterator(OutputIt, size_t) [with OutputIt = char*; size_t = long unsigned int]'
  505 |   truncating_iterator(OutputIt out, size_t limit)
      |   ^~~~~~~~~~~~~~~~~~~
/testbed/include/fmt/format.h:505:3: note:   candidate expects 2 arguments, 0 provided
/testbed/include/fmt/format.h:498:7: note: candidate: 'constexpr fmt::v7::detail::truncating_iterator<char*>::truncating_iterator(const fmt::v7::detail::truncating_iterator<char*>&)'
  498 | class truncating_iterator<OutputIt, std::false_type>
      |       ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
/testbed/include/fmt/format.h:498:7: note:   candidate expects 1 argument, 0 provided
/testbed/include/fmt/format.h:498:7: note: candidate: 'constexpr fmt::v7::detail::truncating_iterator<char*>::truncating_iterator(fmt::v7::detail::truncating_iterator<char*>&&)'
/testbed/include/fmt/format.h:498:7: note:   candidate expects 1 argument, 0 provided
[ 61%] Linking CXX executable ../bin/gtest-extra-test
[ 61%] Built target gtest-extra-test
[ 63%] Building CXX object test/CMakeFiles/format-impl-test.dir/format-impl-test.cc.o
gmake[2]: *** [test/CMakeFiles/format-test.dir/build.make:76: test/CMakeFiles/format-test.dir/format-test.cc.o] Error 1
gmake[1]: *** [CMakeFiles/Makefile2:375: test/CMakeFiles/format-test.dir/all] Error 2
gmake[1]: *** Waiting for unfinished jobs....
[ 65%] Linking CXX executable ../bin/format-impl-test
[ 65%] Built target format-impl-test
gmake: *** [Makefile:166: all] Error 2
Initial project build failed with exit code 2. Setting OMNIGRIL_EXIT_CODE to 1 and exiting.
OMNIGRIL_EXIT_CODE=1
+ build_rc=2
+ '[' 2 -ne 0 ']'
+ echo 'Initial project build failed with exit code 2. Setting OMNIGRIL_EXIT_CODE to 1 and exiting.'
+ rc=1
+ echo OMNIGRIL_EXIT_CODE=1
+ exit 1
